исправление замечаний sonarQube